--- a/wiki/it/FreeCAD_Manual_Converter.html
+++ b/wiki/it/FreeCAD_Manual_Converter.html
@@ -78,7 +78,7 @@ FreeCAD Manual Converter
 <p>FreeCAD Manual Converter &egrave; uno script Python che genera automaticamente le versioni PDF ed EPUB del manuale di FreeCAD dal Wiki di FreeCAD. Crea un manuale offline completo e correttamente formattato, che include tutti i capitoli, le immagini e la formattazione del manuale online.
 </p>
 <h3><span class="mw-headline" id="Background">Background</span></h3>
-<p>Il <a href="../index.php?title=Manuale;Introduzione/it&amp;action=edit&amp;redlink=1.html" class="new" title="Manuale:Introduzione/it (page does not exist)">Manuale di FreeCAD</a> &egrave; un documento vivo, in continua evoluzione grazie ai contributi dei membri della comunit&agrave;. Sebbene ci&ograve; lo renda un'eccellente risorsa aggiornata, a volte gli utenti hanno bisogno di accedere al manuale offline o preferiscono leggerlo su e-reader e tablet. Questo script colma questa lacuna consentendo agli utenti di:
+<p>Il <a href="../it/Manual;Introduction.html" title="Manual:Introduction/it">Manuale di FreeCAD</a> &egrave; un documento vivo, in continua evoluzione grazie ai contributi dei membri della comunit&agrave;. Sebbene ci&ograve; lo renda un'eccellente risorsa aggiornata, a volte gli utenti hanno bisogno di accedere al manuale offline o preferiscono leggerlo su e-reader e tablet. Questo script colma questa lacuna consentendo agli utenti di:
 </p>
 <ul><li>Generare una copia offline aggiornata del manuale in qualsiasi momento</li>
 <li>Creare formati PDF ed EPUB per diverse preferenze di lettura</li>
@@ -623,12 +623,12 @@ if __name__ == "__main__":
 </pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126135509
+Cached time: 20260126135558
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.032 seconds
-Real time usage: 0.048 seconds
+CPU time usage: 0.031 seconds
+Real time usage: 0.050 seconds
 Preprocessor visited node count: 141/1000000
 Post&#8208;expand include size: 2488/2097152 bytes
 Template argument size: 632/2097152 bytes
@@ -639,13 +639,13 @@ Unstrip post&#8208;expand size: 21467/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.188      1 -total
- 44.97%    4.581      1 Template:Macro/it
- 30.50%    3.107      3 Template:Code
- 21.15%    2.155      1 Template:MacroCode
+100.00%   10.180      1 -total
+ 50.65%    5.156      1 Template:Macro/it
+ 22.96%    2.337      1 Template:MacroCode
+ 22.58%    2.299      3 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135509 and revision id 1744374. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:388735-0!canonical and timestamp 20260126135558 and revision id 1744376. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
