--- a/wiki/it/Macro_PCBWay.html
+++ b/wiki/it/Macro_PCBWay.html
@@ -4,7 +4,6 @@
 <li><a href="../fr/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro PCBWay (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: PCBWay (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -13,13 +12,13 @@ Macro PCBWay
 </p>
 </td></tr>
 <tr>
-<th class="ctOdd">Description
+<th class="ctOdd">Descrizione
 </th></tr>
 <tr>
-<td class="ctEven left macro-description">Sends a selected object to PCBWay for manufacturing through CNC milling, laser cutting or 3D printing.<br><br>Macro version: 1.0<br>Last modified: 2022-07-22<br>FreeCAD version: All<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/7/7b/Pcbway.png">ToolBar Icon</a><br>Author: Yorik van Havre<br>
+<td class="ctEven left macro-description">Invia un oggetto selezionato a PCBWay per la produzione tramite fresatura CNC, taglio laser o stampa 3D.<br><br>Versione macro: 1.0<br>Ultima modifica: 2022-07-22<br>Versione FreeCAD: All<br>Download: <a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/7/7b/Pcbway.png">ToolBar Icon</a><br>Autore: Yorik van Havre<br>
 </td></tr>
 <tr>
-<th class="ctOdd">Author
+<th class="ctOdd">Autore
 </th></tr>
 <tr>
 <td class="ctEven macro-author"><a href="../index.php?title=User;Yorik_van_Havre&amp;action=edit&amp;redlink=1.html" class="new" title="User:Yorik van Havre (page does not exist)">Yorik van Havre</a>
@@ -31,40 +30,40 @@ Macro PCBWay
 <td class="ctEven macro-download"><a rel="nofollow" class="external text" href="https://wiki.freecad.org/images/7/7b/Pcbway.png">ToolBar Icon</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Links
+<th class="ctOdd">Link
 </th></tr>
 <tr>
-<td class="ctEven macro-Links"><a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a><br><a href="../How_to_install_macros.html" title="How to install macros">How to install macros</a><br><a href="../Customize_Toolbars.html" title="Customize Toolbars">How to customize toolbars</a>
+<td class="ctEven macro-Links"><a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a><br><a href="../it/How_to_install_macros.html" title="How to install macros/it">Come installare le macro</a><br><a href="../it/Customize_Toolbars.html" title="Customize Toolbars/it">Personalizzare la  toolbar</a>
 </td></tr>
 <tr>
-<th class="ctOdd">Macro Version
+<th class="ctOdd">Versione macro
 </th></tr>
 <tr>
 <td class="ctEven macro-version">1.0
 </td></tr>
 <tr>
-<th class="ctOdd">Date last modified
+<th class="ctOdd">Data ultima modifica
 </th></tr>
 <tr>
 <td class="ctEven macro-date">2022-07-22
 </td></tr>
 <tr>
-<th class="ctOdd">FreeCAD Version(s)
+<th class="ctOdd">Versioni di FreeCAD
 </th></tr>
 <tr>
 <td class="ctEven FreeCAD-version">All
 </td></tr>
 <tr>
-<th class="ctOdd">Default shortcut
+<th class="ctOdd">Scorciatoia
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuna</i>
 </td></tr>
 <tr>
-<th class="ctOdd">See also
+<th class="ctOdd">Vedere anche
 </th></tr>
 <tr>
-<td class="ctEven"><i>None</i>
+<td class="ctEven"><i>Nessuno</i>
 </td></tr>
 <tr>
 <th class="ctOdd">
@@ -73,10 +72,9 @@ Macro PCBWay
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr>
 </tbody></table>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Description">Description</span></h2>
-</div>
+<p><span id="Description"></span>
+</p>
+<h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>This macro sends the currently selected object (mesh, shape or body) to the <a rel="nofollow" class="external text" href="https://pcbway.com">PCBWay website</a> to get an instant quote for manufacturing through CNC milling, laser cutting or 3D printing. After the object is sent, a page will be opened on the PCBWay website to allow the user to adjust details and options.
 </p>
@@ -304,15 +302,15 @@ def main():
     #        QtGui.QMessageBox.Yes</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260123165629
+Cached time: 20260126162934
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.038 seconds
-Real time usage: 0.075 seconds
-Preprocessor visited node count: 128/1000000
-Post&#8208;expand include size: 2924/2097152 bytes
-Template argument size: 7617/2097152 bytes
+CPU time usage: 0.033 seconds
+Real time usage: 0.128 seconds
+Preprocessor visited node count: 125/1000000
+Post&#8208;expand include size: 2952/2097152 bytes
+Template argument size: 7619/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -320,15 +318,15 @@ Unstrip post&#8208;expand size: 8798/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   14.816      1 -total
- 26.94%    3.991      1 Template:MacroCode
- 22.91%    3.394      1 Template:Codeextralink
- 22.68%    3.360      1 Template:Macro
- 16.08%    2.383      2 Template:MenuCommand
-  8.48%    1.257      1 Template:Button
+100.00%   27.694      1 -total
+ 37.88%   10.491      1 Template:MacroCode
+ 20.87%    5.780      1 Template:Macro/it
+ 19.25%    5.331      1 Template:Codeextralink
+ 11.57%    3.205      2 Template:MenuCommand
+  8.81%    2.440      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260123165629 and revision id 1743072. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260126162934 and revision id 1744409. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
