--- a/wiki/it/Macro_PCBWay.html
+++ b/wiki/it/Macro_PCBWay.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro PCBWay (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_PCBWay.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro PCBWay (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro PCBWay (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: PCBWay (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -76,11 +76,8 @@ Macro PCBWay
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Questa macro invia l'oggetto attualmente selezionato (mesh, forma o corpo) al sito web PCBWay <a rel="nofollow" class="external autonumber" href="https://pcbway.com">[1]</a> per ottenere un preventivo immediato per la produzione tramite fresatura CNC, taglio laser o stampa 3D. Dopo l'invio dell'oggetto, verr&agrave; aperta una pagina sul sito web PCBWay per consentire all'utente di modificare dettagli e opzioni.
+</p><p><b>Nota</b>: gli oggetti basati su mesh possono essere realizzati solo tramite stampa 3D. Per la fresatura CNC o il taglio laser, &egrave; necessario utilizzare oggetti basati su forme.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p><b>Note</b>: Mesh-based objects can only be manufactured through 3D printing. For CNC milling or laser cutting, you must use shape-based objects.
-</p>
-</div>
 <div class="toccolours mw-collapsible mw-collapsed" style="cursor:not-allowed">
 <p>Temporary code for external macro link. Do not use this code. This code is used exclusively by <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>. <i>Link for optional manual installation: <a rel="nofollow" class="external text" href="https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master/Utility/pcbway.FCMacro">Macro</a></i>
 </p>
@@ -300,31 +297,31 @@ def main():
     #        QtGui.QMessageBox.Yes</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126162951
+Cached time: 20260126163004
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.043 seconds
-Real time usage: 0.064 seconds
-Preprocessor visited node count: 124/1000000
+CPU time usage: 0.034 seconds
+Real time usage: 0.088 seconds
+Preprocessor visited node count: 123/1000000
 Post&#8208;expand include size: 2952/2097152 bytes
 Template argument size: 7619/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8798/5000000 bytes
+Unstrip post&#8208;expand size: 8799/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.174      1 -total
- 28.18%    4.839      1 Template:Macro/it
- 22.02%    3.782      1 Template:Codeextralink
- 20.16%    3.462      1 Template:MacroCode
- 14.14%    2.429      2 Template:MenuCommand
- 11.46%    1.968      1 Template:Button
+100.00%   16.749      1 -total
+ 30.68%    5.138      1 Template:Macro/it
+ 26.35%    4.413      1 Template:Codeextralink
+ 23.48%    3.932      1 Template:MacroCode
+ 10.02%    1.679      2 Template:MenuCommand
+  6.89%    1.154      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260126162950 and revision id 1744411. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260126163004 and revision id 1744413. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
