--- a/wiki/it/Macro_PCBWay.html
+++ b/wiki/it/Macro_PCBWay.html
@@ -125,11 +125,8 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <p><span id="Code"></span>
 </p>
 <h2><span class="mw-headline" id="Codice">Codice</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The latest version of the macro is to be found at <a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/Utility/pcbway.FCMacro">https://github.com/FreeCAD/FreeCAD-macros/blob/master/Utility/pcbway.FCMacro</a>
-</p>
-</div>
-<p><b>Macro_PCBWay.FCMacro</b>
+<p>L'ultima versione della macro &egrave; disponibile su <a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD-macros/blob/master/Utility/pcbway.FCMacro">https://github.com/FreeCAD/FreeCAD-macros/blob/master/Utility/pcbway.FCMacro</a>
+</p><p><b>Macro_PCBWay.FCMacro</b>
 </p>
 <pre>#***************************************************************************
 #*                                                                         *
@@ -297,13 +294,13 @@ def main():
     #        QtGui.QMessageBox.Yes</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126163004
+Cached time: 20260126163016
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.034 seconds
-Real time usage: 0.088 seconds
-Preprocessor visited node count: 123/1000000
+Real time usage: 0.060 seconds
+Preprocessor visited node count: 122/1000000
 Post&#8208;expand include size: 2952/2097152 bytes
 Template argument size: 7619/2097152 bytes
 Highest expansion depth: 5/100
@@ -313,15 +310,15 @@ Unstrip post&#8208;expand size: 8799/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.749      1 -total
- 30.68%    5.138      1 Template:Macro/it
- 26.35%    4.413      1 Template:Codeextralink
- 23.48%    3.932      1 Template:MacroCode
- 10.02%    1.679      2 Template:MenuCommand
-  6.89%    1.154      1 Template:Button
+100.00%   11.839      1 -total
+ 32.76%    3.879      1 Template:Macro/it
+ 21.83%    2.584      1 Template:Codeextralink
+ 20.31%    2.404      1 Template:MacroCode
+ 11.67%    1.382      2 Template:MenuCommand
+ 10.45%    1.237      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260126163004 and revision id 1744413. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260126163015 and revision id 1744415. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
