--- a/wiki/it/Macro_PCBWay.html
+++ b/wiki/it/Macro_PCBWay.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro PCBWay (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_PCBWay.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro PCBWay (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro PCBWay (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_PCBWay.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: PCBWay (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 10px;">
 <tbody><tr>
@@ -113,15 +113,13 @@ webbrowser.open("https://raw.githubusercontent.com/FreeCAD/FreeCAD-macros/master
 <span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilizzo">Utilizzo</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ol><li>Open or create a FreeCAD document containing an object you wish to manufacture with PCBWay.</li>
-<li>Select the object you wish to manufacture. If no object is selected but there is only one visible object on screen, that object will be sent.</li>
-<li>Open the <a href="../Std_DlgMacroExecute.html" title="Std DlgMacroExecute">Macros manager</a> under menu <b>Macro &rarr; Macros...</b>.</li>
-<li>Select the PCBWay macro from the list.</li>
-<li>Click <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Execute</span>.</li>
-<li>Next times, the PCBWay macro will be under menu <b>Macro &rarr; Recent macros</b>.</li>
-<li>Your object will be packed in the STEP format for shapes or the OBJ format for meshes, and sent to PCBWay. A browser window will then open for you to fill out additional details and place an order for your product.</li></ol>
-</div>
+<ol><li>Aprire o creare un documento FreeCAD contenente un oggetto che desideri realizzare con PCBWay.</li>
+<li>Selezionare l'oggetto che si desidera realizzare. Se non &egrave; selezionato alcun oggetto ma &egrave; visibile un solo oggetto sullo schermo, tale oggetto verr&agrave; inviato.</li>
+<li>Aprire <a href="../it/Std_DlgMacroExecute.html" title="Std DlgMacroExecute/it">Gestore Macro</a> nel menu <b>Macro &rarr; Macro...</b>.</li>
+<li>Selezionare la macro PCBWay dall'elenco.</li>
+<li>Fare clic su <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Esegui</span>.</li>
+<li>Le volte successive, la macro PCBWay sar&agrave; disponibile nel menu <b>Macro &rarr; Macro recenti</b>.</li>
+<li>L'oggetto verr&agrave; compresso nel formato STEP per le forme o nel formato OBJ per le mesh e inviato a PCBWay. Si aprir&agrave; quindi una finestra del browser in cui si potranno inserire ulteriori dettagli ed effettuare un ordine per il prodotto.</li></ol>
 <p><span id="Code"></span>
 </p>
 <h2><span class="mw-headline" id="Codice">Codice</span></h2>
@@ -294,31 +292,31 @@ def main():
     #        QtGui.QMessageBox.Yes</pre>
 <!-- 
 NewPP limit report
-Cached time: 20260126163016
+Cached time: 20260126163130
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.034 seconds
-Real time usage: 0.060 seconds
-Preprocessor visited node count: 122/1000000
-Post&#8208;expand include size: 2952/2097152 bytes
-Template argument size: 7619/2097152 bytes
+CPU time usage: 0.039 seconds
+Real time usage: 0.061 seconds
+Preprocessor visited node count: 121/1000000
+Post&#8208;expand include size: 2950/2097152 bytes
+Template argument size: 7617/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8799/5000000 bytes
+Unstrip post&#8208;expand size: 8803/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   11.839      1 -total
- 32.76%    3.879      1 Template:Macro/it
- 21.83%    2.584      1 Template:Codeextralink
- 20.31%    2.404      1 Template:MacroCode
- 11.67%    1.382      2 Template:MenuCommand
- 10.45%    1.237      1 Template:Button
+100.00%   14.689      1 -total
+ 24.09%    3.538      1 Template:Codeextralink
+ 23.14%    3.399      1 Template:Macro/it
+ 21.98%    3.229      1 Template:MacroCode
+ 13.50%    1.983      2 Template:MenuCommand
+ 13.43%    1.973      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260126163015 and revision id 1744415. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412494-0!canonical and timestamp 20260126163130 and revision id 1744417. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
