--- a/wiki/bg/Import_Export.html
+++ b/wiki/bg/Import_Export.html
@@ -38,18 +38,18 @@
 <h2><span id=".D0.9F.D1.80.D0.B5.D0.B3.D0.BB.D0.B5.D0.B4_.D0.BD.D0.B0_.D1.84.D0.B0.D0.B9.D0.BB.D0.BE.D0.B2.D0.B8.D1.82.D0.B5_.D1.84.D0.BE.D1.80.D0.BC.D0.B0.D1.82.D0.B8"></span><span class="mw-headline" id="&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;_&#1085;&#1072;_&#1092;&#1072;&#1081;&#1083;&#1086;&#1074;&#1080;&#1090;&#1077;_&#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080;">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1092;&#1072;&#1081;&#1083;&#1086;&#1074;&#1080;&#1090;&#1077; &#1092;&#1086;&#1088;&#1084;&#1072;&#1090;&#1080;</span></h2>
 <table class="wikitable">
 <tbody><tr>
-<th>Format
+<th>&#1060;&#1086;&#1088;&#1084;&#1072;&#1090;
 </th>
-<th>Description
+<th>&#1054;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1077;
 </th>
-<th>Import / Open
+<th>&#1048;&#1084;&#1087;&#1086;&#1088;&#1090; / &#1054;&#1090;&#1074;&#1072;&#1088;&#1103;&#1085;&#1077;
 </th>
-<th>Export / Create
+<th>&#1045;&#1082;&#1089;&#1087;&#1086;&#1088;&#1090; / &#1057;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077;
 </th></tr>
 <tr>
 <td><a href="../File_Format_FCStd.html" title="File Format FCStd">*.FCStd</a>
 </td>
-<td>FreeCAD native format
+<td>&#1060;&#1086;&#1088;&#1084;&#1072;&#1090; &#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; FreeCAD
 </td>
 <td><a href="../Std_Open.html" title="Std Open">Std Open</a>, <a href="../Std_MergeProjects.html" title="Std MergeProjects">Std MergeProjects</a>
 </td>
@@ -1258,12 +1258,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126162630
+Cached time: 20260126163450
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.151 seconds
+CPU time usage: 0.115 seconds
+Real time usage: 0.172 seconds
 Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 7006/2097152 bytes
 Template argument size: 2229/2097152 bytes
@@ -1274,13 +1274,13 @@ Unstrip post&#8208;expand size: 3130/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.087      1 -total
- 70.05%    6.365      1 Template:Userdocnavi/bg
- 30.56%    2.777      1 Template:Navigation_menu_2
- 26.76%    2.432      2 Template:Docnav
+100.00%    8.773      1 -total
+ 64.58%    5.666      1 Template:Userdocnavi/bg
+ 32.28%    2.832      2 Template:Docnav
+ 28.90%    2.536      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126162630 and revision id 1744393. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126163450 and revision id 1744419. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
