--- a/wiki/bg/Import_Export.html
+++ b/wiki/bg/Import_Export.html
@@ -67,7 +67,7 @@
 <tr>
 <td><a href="../Macros.html" title="Macros">*.FCMacro</a>
 </td>
-<td>FreeCAD macro (Python code)
+<td>&#1084;&#1072;&#1082;&#1088;&#1086; &#1085;&#1072; FreeCAD (&#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1077;&#1085; &#1082;&#1086;&#1076; &#1085;&#1072; Python)
 </td>
 <td><a href="../Std_Import.html" title="Std Import">Std Import</a>
 </td>
@@ -76,7 +76,7 @@
 <tr>
 <td><a href="../Material.html" title="Material">*.FCMat</a>
 </td>
-<td>FreeCAD material card
+<td>&#1050;&#1072;&#1088;&#1090;&#1072; &#1085;&#1072; &#1084;&#1072;&#1090;&#1077;&#1088;&#1080;&#1072;&#1083; &#1085;&#1072; FreeCAD
 </td>
 <td><a href="../Std_Import.html" title="Std Import">Std Import</a>
 </td>
@@ -85,7 +85,7 @@
 <tr>
 <td><a href="../Std_DlgParameter.html" title="Std DlgParameter">*.FCParam</a>
 </td>
-<td>FreeCAD parameter file
+<td>&#1060;&#1072;&#1081;&#1083; &#1089; &#1087;&#1072;&#1088;&#1072;&#1084;&#1077;&#1090;&#1088;&#1080; &#1085;&#1072; FreeCAD
 </td>
 <td><a href="../Std_DlgParameter.html" title="Std DlgParameter">Std DlgParameter</a>
 </td>
@@ -94,7 +94,7 @@
 <tr>
 <td>*.FCScript
 </td>
-<td>FreeCAD script (Python code)
+<td>&#1057;&#1082;&#1088;&#1080;&#1087;&#1090; &#1079;&#1072; FreeCAD (&#1087;&#1088;&#1086;&#1075;&#1088;&#1072;&#1084;&#1077;&#1085; &#1082;&#1086;&#1076; &#1085;&#1072; Python)
 </td>
 <td><a href="../Std_Import.html" title="Std Import">Std Import</a>
 </td>
@@ -1258,12 +1258,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126163450
+Cached time: 20260126164016
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.115 seconds
-Real time usage: 0.172 seconds
+CPU time usage: 0.109 seconds
+Real time usage: 0.151 seconds
 Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 7006/2097152 bytes
 Template argument size: 2229/2097152 bytes
@@ -1274,13 +1274,13 @@ Unstrip post&#8208;expand size: 3130/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.773      1 -total
- 64.58%    5.666      1 Template:Userdocnavi/bg
- 32.28%    2.832      2 Template:Docnav
- 28.90%    2.536      1 Template:Navigation_menu_2
+100.00%   10.726      1 -total
+ 66.49%    7.132      1 Template:Userdocnavi/bg
+ 30.09%    3.227      2 Template:Docnav
+ 23.32%    2.501      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126163450 and revision id 1744419. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126164015 and revision id 1744421. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
