--- a/wiki/bg/Import_Export.html
+++ b/wiki/bg/Import_Export.html
@@ -11,7 +11,7 @@
 <li><a href="../pt-br/Import_Export.html" class="mw-pt-progress mw-pt-progress--med" title="Importar Exportar (44% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/Import_Export.html" class="mw-pt-progress mw-pt-progress--low" title="Import Export (11% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
 <li><a href="../cs/Import_Export.html" class="mw-pt-progress mw-pt-progress--med" title="Import Export (22% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Import_Export.html" class="mw-pt-progress mw-pt-progress--high" title="&#1048;&#1084;&#1087;&#1086;&#1088;&#1090; &#1080; &#1101;&#1082;&#1089;&#1087;&#1086;&#1088;&#1090; (89% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Import_Export.html" class="mw-pt-progress mw-pt-progress--low" title="&#23548;&#20837;&#23548;&#20986; (11% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Import_Export.html" class="mw-pt-progress mw-pt-progress--med" title="&#12452;&#12531;&#12509;&#12540;&#12488;&#12539;&#12456;&#12463;&#12473;&#12509;&#12540;&#12488; (33% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -1258,29 +1258,29 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260126164016
+Cached time: 20260126164028
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [no&#8208;toc]
-CPU time usage: 0.109 seconds
-Real time usage: 0.151 seconds
+CPU time usage: 0.114 seconds
+Real time usage: 0.150 seconds
 Preprocessor visited node count: 134/1000000
 Post&#8208;expand include size: 7006/2097152 bytes
 Template argument size: 2229/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3130/5000000 bytes
+Unstrip post&#8208;expand size: 3134/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.726      1 -total
- 66.49%    7.132      1 Template:Userdocnavi/bg
- 30.09%    3.227      2 Template:Docnav
- 23.32%    2.501      1 Template:Navigation_menu_2
+100.00%    9.022      1 -total
+ 71.39%    6.441      1 Template:Userdocnavi/bg
+ 31.73%    2.863      1 Template:Navigation_menu_2
+ 24.87%    2.244      2 Template:Docnav
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126164015 and revision id 1744421. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412719-0!canonical and timestamp 20260126164028 and revision id 1744421. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
