--- a/wiki/it/Macro_documentation.html
+++ b/wiki/it/Macro_documentation.html
@@ -10,7 +10,7 @@
 </p>
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Tutte le macro devono essere documentate correttamente, nello stesso modo in cui vengono documentati i <a href="../it/Gui_Command.html" title="Gui Command/it">comandi GUI</a>.
-</p><p>Dovrebbero avere una pagina wiki individuale e dovrebbero essere elencate in una delle categorie in <a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolte macro</a>.
+</p><p>Dovrebbero avere una pagina wiki individuale e dovrebbero essere elencate in una delle categorie nella <a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a>.
 </p>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>The <a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a> page has a good selection of macros created by experienced users, and many of them can be directly installed from the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>.
@@ -295,12 +295,12 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126165327
+Cached time: 20260126165447
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.111 seconds
+CPU time usage: 0.068 seconds
+Real time usage: 0.097 seconds
 Preprocessor visited node count: 340/1000000
 Post&#8208;expand include size: 2987/2097152 bytes
 Template argument size: 2042/2097152 bytes
@@ -311,18 +311,18 @@ Unstrip post&#8208;expand size: 10021/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.522      1 -total
- 18.92%    4.072      5 Template:Code
- 12.73%    2.739      1 Template:ColoredParagraph
- 12.52%    2.694      1 Template:Codeextralink
- 11.20%    2.410      1 Template:Caption
- 11.07%    2.382      7 Template:Incode
-  9.14%    1.968      1 Template:TOCright
-  8.87%    1.910      4 Template:Emphasis
-  6.82%    1.468      1 Template:MenuCommand
+100.00%   18.393      1 -total
+ 16.97%    3.121      5 Template:Code
+ 14.46%    2.659      1 Template:ColoredParagraph
+ 12.52%    2.303      1 Template:Codeextralink
+ 11.42%    2.101      7 Template:Incode
+ 11.15%    2.050      1 Template:Caption
+  9.22%    1.696      1 Template:MenuCommand
+  8.07%    1.485      4 Template:Emphasis
+  7.59%    1.396      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165327 and revision id 1744426. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165447 and revision id 1744428. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
